--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
                         <div class="feedback-content">
                             <p>
-                                Laura Souza
+                                Celina Souza
                                 <span>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
@@ -261,7 +261,7 @@
 
                         <div class="feedback-content">
                             <p>
-                                Laura Vieira
+                                Fran Vieira
                                 <span>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
